--- a/templates/default/sabnzbd.ini.erb
+++ b/templates/default/sabnzbd.ini.erb
@@ -149,11 +149,28 @@ rating_feedback = 1
 enable_meta = 1
 rating_api_key = ""
 warn_dupl_jobs = 1
-rating_host = www.oznzb.com
+rating_host = api.oznzb.com
 flat_unpack = 0
 new_nzb_on_failure = 0
 unwanted_extensions = ,
 action_on_unwanted_extensions = 0
+rating_filter_enable = 0
+rating_filter_abort_video = 0
+rating_filter_pause_audio = 0
+rating_filter_pause_encrypted_confirm = 0
+rating_filter_pause_encrypted = 0
+rating_filter_abort_encrypted_confirm = 0
+rating_filter_pause_spam_confirm = 0
+rating_filter_abort_keywords = ""
+rating_filter_abort_encrypted = 0
+rating_filter_pause_keywords = ""
+rating_filter_abort_spam_confirm = 0
+rating_filter_abort_downvoted = 0
+rating_filter_pause_downvoted = 0
+rating_filter_abort_audio = 0
+rating_filter_pause_spam = 0
+rating_filter_pause_video = 0
+rating_filter_abort_spam = 0
 [logging]
 enable_cherrypy_logging = 1
 log_backups = 5
