Makes http port configurable. Sets it to 8080 by default
8080 is the default port for sabnzbdplus

--- a/templates/default/sabnzbd.ini.erb
+++ b/templates/default/sabnzbd.ini.erb
@@ -95,7 +95,7 @@ password_file = ""
 pause_on_post_processing = 0
 pause_on_pwrar = 1
 permissions = <%= @permissions %>
-port = 8088
+port = <%= @port %>
 pre_check = 0
 pre_script = None
 prio_sort_list = ,
